@@ -1,4 +1,5 @@
-/***************************************************************************
+/*************************enumerate(pop.individuals()):
+# find spose.**************************************************
  *   Copyright (C) 2004 by Bo Peng                                         *
  *   bpeng@rice.edu                                                        *
  *                                                                         *
